# todotxt

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: recurring-workflow.yml
src/: todotxt.py
src/todotxt/: __init__.py  cli.py
tests/: __init__.py  test_scan.py  test_todotxt.py
tests/data/: badfile.txt  recurring.txt  todo.txt
tests/data/subdir/: projects.txt
